--- a/templates/index.html
+++ b/templates/index.html
@@ -34,9 +34,9 @@
 <!-- upcoming events -->
 <section class="container mx-auto p-10">
 
-    <div class="flex flex-column sm:flex-row flex-wrap space-y-4 sm:space-y-0 items-center justify-between pb-4">
+    <div class="">
     
-        <div>
+        <div class="flex justify-between px-5 my-10">
             <div class="my-4">
                 <h2 class="text-3xl">Upcoming Events</h2>
             </div>
